--- a/.gitignore
+++ b/.gitignore
@@ -50,8 +50,15 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+
+.vscode/
+.vscode/ipch
 .DS_Store
 .DS_Store?
 .Trashes
 .Spotlight-V100
 .out
+*.ipch
+.ipch
+
